--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -16,7 +16,7 @@
 
   height: 7rem;
   background-color: var(--color-white);
-  border-bottom-color: var(--color-grey-light-2);
+  border-bottom: 1px solid var(--color-grey-light-2);
 }
 
 .content {
