--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -16,7 +16,7 @@
 
   height: 7rem;
   background-color: var(--color-white);
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
 }
 
 .content {
@@ -36,8 +36,26 @@
 .hotel-view {
   background-color: var(--color-white);
 
-  //TEST
-  height: 80rem;
+  flex: 1;
+}
 
+.detail {
+  display: flex;
+  padding: 4.5rem;
+  background-color: var(--color-grey-light-1);
+  border-bottom: var(--line);
+}
+
+.description {
+  font-size: 1.4rem;
+  background-color: var(--color-white);
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  flex: 0 0 60%;
+  margin-right: 4.5rem;
+}
+
+.user-reviews {
+  background-color: yellowgreen;
   flex: 1;
 }
